--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ streamlit==1.32.2
 
 # LLM / API
 openai>1.12           # official ≥1.0 client
-#openai-agents
+openai-agents
 pydantic
 tiktoken==0.6.0          # fast tokeniser used by openai-python
 transformers==4.38.2     # only needed when "Local LLaMA" is selected
